# VideoAndAudio

./: README.md  readme.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/wyf/avdio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/wyf/avdio/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wyf/avdio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
